[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.10"
futures-util = "0.3.28"
histogram = "0.6.9"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
rand = "0.8.5"
solana-account-decoder = { path = "/home/stacc/jito-solana/account-decoder" }

jito-searcher-client = { path = "../searcher_client" }
solana-client = { path="/home/stacc/jito-solana/client" }
solana-metrics ={ path="/home/stacc/jito-solana/metrics" }
solana-rpc-client-api ={ path="/home/stacc/jito-solana/rpc-client-api" }
solana-sdk = { path="/home/stacc/jito-solana/sdk" }
solana-transaction-status = { path="/home/stacc/jito-solana/transaction-status" }
spl-memo = "3.0.1"
thiserror = "1.0.57"
regex = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
yellowstone-grpc-client = { path = "../yellowstone-grpc/yellowstone-grpc-client", version = "=1.14.0+solana.1.17.20" }
yellowstone-grpc-proto = { path = "../yellowstone-grpc/yellowstone-grpc-proto", version = "=1.13.0+solana.1.17.20" }
anyhow.workspace = true
futures.workspace = true
num-traits = "0.2.18"
borsh = "*"
rust_decimal = { version = "^1", features = ["maths", "serde"] }
rust_decimal_macros = "1.33.1"
switchboard-common = { version = "0.11.0", features = [
    "client",
] }
async-recursion = "1.0.5"
solana-program = { path="/home/stacc/jito-solana/sdk/program" }
spl-math = "0.2.0"
spl-token-2022 = { version = "2.0.0", features = ["no-entrypoint"] }

cached = { version = "*", features = ["async"] }

serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
arrayref = "0.3.7"
bytemuck = { version = "1.14.3", features = ["derive"] }
lazy_static.workspace = true
hex.workspace = true
spl-token = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
